<resources>
    <string name="app_name">Fridge Companion</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_item_entry">Add an Item</string>
    <string name="setting">Setting</string>
    <string name="history">History</string>
    <string name="image_content_des">Food Image</string>
    <string name="welcome_text_placeholder">Welcome, UserName!</string>


    <string name="action_settings">Settings</string>
    <string name="password_hint">Password</string>
    <string name="email_hint">Email</string>
    <string name="sign_up_button_label">Sign Up</string>
    <string name="signup_error_message">Please make sure you enter an email address and password!</string>
    <string name="signup_error_title">Error!</string>
    <string name="signup_success">Account successfully created! You can now Login.</string>
    <string name="login_error_message">Please make sure you enter an email address and password!</string>
    <string name="login_error_title">Error!</string>
    <string name="login_button_label">Login</string>
    <string name="sign_up_text">Sign Up!</string>
    <string name="title_activity_login">Sign in</string>
    <string name="add_item">Add New Item</string>
    <string name="action_logout">Logout</string>
    <string name="action_leave_fridge">Leave Fridge</string>
    <string name="action_leave_fridge_summary">Remove this fridge from your fridges</string>
    <string name="back_button_image_des">back button image</string>
    <string name="trash_button_image_des">trash button image</string>
    <string name="food_image_des">Food Image</string>
    <string name="food_text_placeholder">Beef</string>
    <string name="food_entry">Food Entry</string>
    <string name="key_information">Key Information</string>
    <string name="product_name">Product Name:</string>
    <string name="quantity">Quantity:</string>
    <string name="purchase_date">Purchase Date:</string>
    <string name="save">Save</string>
    <string name="notes">Notes:</string>
    <string name="nutrition">Nutrition:</string>
    <string name="calories">Calories:</string>
    <string name="more_information">More Information</string>
    <string name="new_image">New Image</string>
    <string name="food_image">Food Image</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>

    <string name="account_preferences">Account Preferences</string>
    <string name="user_profile_title">User Profile</string>
    <string name="user_profile_summary">Edit Profile</string>
    <string name="profile_photo_file_name">stock_user_picture.png</string>
    <string name="default_profile_photo_file_name">beef.jpeg</string>
    <string name="notification_settings_title">Notification Settings</string>
    <string name="notification_on_off">Turn notifications off?</string>
    <string name="logout_summary">Sign out of your account</string>
    <string name="profile_save_button_text">Save Changes</string>
    <string name="profile_cancel_button_text">Cancel</string>
    <string name="list_pref_notif_exp_title">Expiration Date Notification Settings</string>
    <string name="list_pref_notif_exp_summary">Choose how early you would like to be notified when food is about to expire</string>

    <string-array name="exp_date_unit">
        <item>1 Day</item>
        <item>2 Days</item>
        <item>3 Days</item>
    </string-array>

    <string-array name="exp_date_val">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string name="notif_date">Notification Date</string>

</resources>