<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    app:titleTextColor="@color/fridge_blue"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory
        android:addStatesFromChildren="false"
        app:iconSpaceReserved="false"
        app:titleTextColor="@color/fridge_blue"
        android:title="@string/account_preferences">

        <PreferenceScreen
            android:key="user_profile"
            android:title="@string/user_profile_title"
            app:iconSpaceReserved="false"
            android:summary="@string/user_profile_summary">

            <intent
                android:action="android.intent.action.VIEW"
                android:targetPackage="com.fridgecompanion.ui.setting"
                android:targetClass="com.fridgecompanion.ui.setting.ProfileActivity"/>

        </PreferenceScreen>

        <Preference
            app:iconSpaceReserved="false"
            android:title="@string/action_logout"
            android:key="@string/action_logout"
            android:summary="@string/logout_summary"/>

<!--        <Preference-->
<!--            android:title="@string/action_leave_fridge"-->
<!--            android:key="@string/action_leave_fridge"-->
<!--            android:summary="@string/action_leave_fridge_summary"/>-->
    </PreferenceCategory>

    <!-- Notification Settings -->
    <PreferenceCategory
        app:iconSpaceReserved="false"
        android:title="@string/notification_settings_title">
        <CheckBoxPreference
            app:iconSpaceReserved="false"
            android:key="key_notification_on_off"
            android:title="@string/notification_on_off">
        </CheckBoxPreference>
        <ListPreference
            app:iconSpaceReserved="false"
            android:key="key_notification_exp_list_pref"
            android:title="@string/list_pref_notif_exp_title"
            android:summary="@string/list_pref_notif_exp_summary"
            android:entries="@array/exp_date_unit"
            android:entryValues="@array/exp_date_val"
            android:defaultValue="1"
            android:dialogTitle="@string/notif_date">
        </ListPreference>

    </PreferenceCategory>

</PreferenceScreen>