<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    tools:context=".ItemEntryActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#AED3F9"
        android:orientation="vertical"
        android:paddingTop = "10dp"
        >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp">

            <!--back button-->
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp"
                android:elevation="20dp"
                android:layout_marginStart="15dp"
                android:id="@+id/back_button_container"
                android:layout_centerVertical="true"
                android:layout_alignParentStart="true">
                <ImageButton
                    android:id="@+id/left_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding = "10dp"
                    android:scaleType="fitXY"
                    android:src = "@drawable/ic_baseline_arrow_back_ios_new_24"
                    android:background="#FFFFFF"
                    android:contentDescription="@string/back_button_image_des"
                    android:onClick="onClickLeftButton"
                    />
            </androidx.cardview.widget.CardView>

            <!--grid button-->
            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:cardCornerRadius="12dp"
                android:layout_alignParentEnd="true"
                android:elevation="20dp"
                android:layout_marginEnd="15dp"
                android:layout_centerVertical="true"
                android:id="@+id/right_button_container">
                <ImageButton
                    android:id="@+id/right_button"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:padding = "8dp"
                    android:scaleType="fitXY"
                    android:src = "@drawable/ic_baseline_document_scanner_24"
                    android:rotation="90"
                    android:background="#FFFFFF"
                    android:onClick="onClickRightButton"
                    android:contentDescription="@string/trash_button_image_des" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/food_entry"
                android:textSize="18sp"
                android:textStyle="bold"
                />

        </RelativeLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded"
            android:orientation="vertical"
            android:padding = "20dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/key_information"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/product_name" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/name_edit"
                    android:layout_width="296dp"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />

                <ImageButton
                    android:id="@+id/button_search"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/fui_transparent"
                    android:onClick="onClickButtonSearch"
                    android:paddingHorizontal="10dp"
                    android:src="@drawable/ic_baseline_search_24" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:orientation="vertical">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:text = "@string/quantity"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/quantity_edit"
                        android:layout_width="100dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:inputType="number"
                        android:singleLine="true"/>
                    <Spinner
                        android:id="@+id/unit_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:entries="@array/unit_spinner_entries"/>
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/purchase_date"
                    android:layout_marginTop="5dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layoutDirection="rtl">
                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src ="@drawable/ic_baseline_calendar_today_24"
                        android:background="@color/fui_transparent"
                        android:paddingHorizontal="10dp"
                        android:onClick="onClickPurchaseDate"
                        />

                    <EditText
                        android:id="@+id/purchase_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:textIsSelectable="false"
                        android:layoutDirection="ltr"/>
                </LinearLayout>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Expiration Date:"
                    android:layout_marginTop="5dp"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layoutDirection="rtl">
                    <ImageButton
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:src ="@drawable/ic_baseline_calendar_today_24"
                        android:background="@color/fui_transparent"
                        android:paddingHorizontal="10dp"
                        android:onClick="onClickExpireDate"
                        />

                    <EditText
                        android:id="@+id/expire_edit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="date"
                        android:clickable="false"
                        android:cursorVisible="false"
                        android:focusable="false"
                        android:focusableInTouchMode="false"
                        android:textIsSelectable="false"
                        android:layoutDirection="ltr"/>
                </LinearLayout>

            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded"
            android:orientation="vertical"
            android:padding = "20dp"
            android:layout_marginVertical="10dp"
            android:layout_marginHorizontal="15dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text = "@string/food_image"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_marginHorizontal="5dp"
                android:orientation="horizontal">
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="0dp">
                    <ImageView
                        android:id="@+id/image_edit"
                        android:layout_width="110dp"
                        android:layout_height="110dp"
                        android:scaleType="fitCenter"
                        android:contentDescription="@string/image_content_des" />
                </androidx.cardview.widget.CardView>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <Button
                        android:onClick="OnClickNewImage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/new_image"
                        android:layout_centerInParent="true"/>
                </RelativeLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded"
            android:orientation="vertical"
            android:padding = "20dp"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text = "@string/more_information"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginBottom="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="5dp"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text = "@string/calories"/>
                <EditText
                    android:id="@+id/calories_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:inputType="numberDecimal"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text = "@string/nutrition"
                    android:layout_marginTop="5dp"/>
                <EditText
                    android:id="@+id/nutrition_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text = "@string/notes"
                    android:layout_marginTop="5dp"
                    />
                <EditText
                    android:id="@+id/note_edit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|left"
                    android:minLines="3"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/top_rounded"
            android:orientation="horizontal"
            android:padding="5dp">
            <Button
                android:id="@+id/save_entry_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:text="@string/save"
                android:onClick="onClickSaveButton"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>