<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignUpActivity"
    android:background="#AED3F9"
    android:weightSum="5">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="Fridge Companion"
        android:layout_weight="2"
        android:gravity="center">

        <ImageView
            android:id="@+id/icon"
            android:layout_width="80dp"
            android:layout_height="180dp"
            android:src="@drawable/icon2"
            android:scaleType="centerCrop"
            android:paddingBottom="20dp"
            android:layout_alignRight="@id/app_title2"
            />
        <TextView
            android:id="@+id/app_title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:paddingTop="85dp"
            android:text="FRIDGE"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textColor="@color/black"/>
        <TextView
            android:id="@+id/app_title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/app_title1"
            android:fontFamily="@font/roboto_bold"
            android:text="COMPANION"
            android:textSize="30sp"
            android:textAlignment="center"
            android:textColor="@color/black"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="3">
        <EditText
            android:id="@+id/emailField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/email_hint"
            android:singleLine="true"
            android:backgroundTint="@color/black">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/passwordField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/emailField"
            android:layout_below="@+id/emailField"
            android:ems="10"
            android:inputType="textPassword"
            android:hint="@string/password_hint"
            android:singleLine="true"
            android:backgroundTint="@color/black"/>
            />
        <LinearLayout
            android:id="@+id/namesField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignLeft="@+id/emailField"
            android:layout_below="@+id/passwordField">
            <EditText
                android:id="@+id/firstNameField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:backgroundTint="@color/black"
                android:hint="@string/first_name_hint"
                android:singleLine="true"/>
            <EditText
                android:id="@+id/lastNameField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:backgroundTint="@color/black"
                android:hint="@string/last_name_hint"
                android:singleLine="true"/>
        </LinearLayout>
        <Button
            android:id="@+id/signupButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/passwordField"
            android:layout_below="@+id/namesField"
            android:layout_marginTop="10dp"
            android:text="@string/sign_up_button_label" />
    </RelativeLayout>



</LinearLayout>